# nrlc.ai

./: .geo-freeze-active  .gitignore  .railwayignore  404_ERRORS_ANALYSIS.md  404_ERRORS_ANALYSIS_2026.md  AI_PROMPT_QUERY_ROUTING.md  ALTERNATE_CANONICAL_ANALYSIS.md  ANALYSIS_ahrefs_tool_page_intent.md  ANALYSIS_floodbarrierpros_entity_authority.md  ANALYSIS_multisurface_entity_authority.md  ANSWER_FIRST_ARCHITECTURE_PLAN.md  ANSWER_FIRST_ARCHITECTURE_QA.md  ANSWER_FIRST_ARCHITECTURE_TEMPLATE.md  ATLANTA_GENERATIVE_SEO_PAGE_ANALYSIS.md  AUTH_IMPLEMENTATION.md  BEGINNER_FUNNEL_STRATEGIC_ANALYSIS.md  BUTTON_SEO_ATTRIBUTES_COMPLETE.md  CAMBRIDGE_AI_OVERVIEWS_PAGE_DEEP_ANALYSIS.md  CANONICAL_COLLAPSE_FIX.md  CANONICAL_COLLAPSE_IMPLEMENTATION.md  CANONICAL_DUPLICATE_ANALYSIS.md  CANONICAL_DUPLICATE_FIXES.md  CASE_STUDY_FULL_URLS.md  CASE_STUDY_QA_COMPLETE.md  CASE_STUDY_QA_REPORT.md  CASE_STUDY_ROUTING_FIX.md  CASE_STUDY_SEO_ONTOLOGY_FIX.md  CASE_STUDY_SYSTEM_COMPLETE.md  CASE_STUDY_SYSTEM_PHP_NATIVE.md  CI_SPEC_IMPLEMENTATION.md  COLOR_UNIFORMITY_INTENT.md  COMPREHENSIVE_QA_REPORT.md  CONTENT_SELF_ASSESSMENT_CHECKLIST_2026.md  CRAWLER_README.md  DEBUG_CSS_CHANGES.md  DEPLOY.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_2025.md  DESIGN_SYSTEM.md  Dockerfile.example  (+179 more)
admin/: case-study-editor.php
agent/: agent.json
api/: ai-search-bible-checkout.php  (+8 more)
serp_intel/: Countries.csv  Dates.csv  Devices.csv  Pages.csv  Queries.csv  README.md  Search appearance.csv  main.py  pyproject.toml
serp_intel/serp_intel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+2573 files in other folders)
